--- a/.github/workflows/assert-branch-conventions.yml
+++ b/.github/workflows/assert-branch-conventions.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: deepakputhraya/action-branch-name@v1.0.0
         with:
-          allowed_prefixes: "feature,fix,performance,chore,ci"
+          allowed_prefixes: "feature/,fix/,performance/,chore/,ci/"
