--- a/.github/workflows/assert-pr-conv.yml
+++ b/.github/workflows/assert-pr-conv.yml
@@ -7,4 +7,6 @@ on:
 jobs:
   # https://www.notion.so/coinhako/Branch-s-name-convention-3f6b7f67f7cf462babc72736901f1d02
   branch-naming-conventions:
-    uses: another-coinhako/.github-private/workflow-templates/assert-pr-conventions.yml@main
+    runs-on: ubuntu-latest
+    steps:
+      - uses: another-coinhako/.github-private/workflow-templates/assert-pr-conventions.yml@main
